# wmvolman

./: .gear-rules  .gitignore  AUTHORS  Makefile.am  NEWS  README  bootstrap  configure.ac  wmvolman.spec
fdi/: .gitignore  95-wmvolman.fdi  Makefile.am
icons/: Makefile.am  card-cf.xpm  card-ms.xpm  card-sdmmc.xpm  card-sm.xpm  cdrom-unknown.xpm  cdrom.xpm  disc-audio.xpm  disc-bd.xpm  disc-bdr.xpm  disc-bdre.xpm  disc-cdr.xpm  disc-cdrw.xpm  disc-dvdr-plus.xpm  disc-dvdr.xpm  disc-dvdram.xpm  disc-dvdrom.xpm  disc-dvdrw-plus.xpm  disc-dvdrw.xpm  disc-hddvd.xpm  disc-hddvdr.xpm  disc-hddvdrw.xpm  harddisk-1394.xpm  harddisk-usb.xpm  harddisk.xpm  removable-1394.xpm  removable-usb.xpm  removable.xpm  unknown.xpm
src/: .gitignore  Makefile.am  hal.c  hal.h  icon_none.xpm  main.c  marshal.list  udisks.c  udisks.h  ui.c  ui.h  wmvolman-buttons.xpm  wmvolman-master.xpm
