deficonsdir = $(pkgdatadir)/default

deficons_DATA = unknown.xpm cdrom.xpm disc-cdr.xpm disc-cdrw.xpm \
	disc-dvdrom.xpm disc-dvdram.xpm disc-dvdr.xpm disc-dvdrw.xpm \
	disc-dvdr-plus.xpm disc-dvdrw-plus.xpm removable.xpm \
	removable-usb.xpm removable-1394.xpm harddisk.xpm harddisk-usb.xpm \
	harddisk-1394.xpm

EXTRA_DIST = $(deficons_DATA)
