deficonsdir = $(pkgdatadir)/default

deficons_DATA = unknown.xpm \
	cdrom.xpm cdrom-unknown.xpm \
	disc-audio.xpm disc-cdr.xpm disc-cdrw.xpm \
	disc-dvdrom.xpm disc-dvdram.xpm disc-dvdr.xpm disc-dvdrw.xpm \
	disc-dvdr-plus.xpm disc-dvdrw-plus.xpm \
	disc-hddvd.xpm disc-hddvdr.xpm disc-hddvdrw.xpm \
	disc-bd.xpm disc-bdr.xpm disc-bdre.xpm \
	removable.xpm removable-usb.xpm removable-1394.xpm \
	harddisk.xpm harddisk-usb.xpm harddisk-1394.xpm \
	card-cf.xpm card-ms.xpm card-sdmmc.xpm card-sm.xpm

EXTRA_DIST = $(deficons_DATA)
